# tidpl

./: .gitignore  README.md  README.ru.md  com.tidpl.scheduler.plist.example  pyproject.toml  run-if-due.sh  run.sh  scheduler.py  service.sh
data/: artist_aliases.txt.example  artist_blocklist.txt.example  mixes.txt.example
tidpl/: auth.py  cli.py  playlist.py
