[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidpl"
version = "0.1.0"
description = "Create Tidal playlists from your DailyTidal export."
requires-python = ">=3.12"
dependencies = [
    "requests",
    "requests-cache",
    "pydantic",
    "typer",
    "rich",
]

[project.scripts]
tidpl = "tidpl.cli:app"

[tool.setuptools.packages.find]
include = ["tidpl", "tidpl.*"]
